feat: blog responsive

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,18 +5,20 @@ title: Blog
 order: 5
 ---
 
-<section id="blog-intro">
+<section id="blog-intro" class="intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">Bienvenue sur le blog de DEVmachine !</h1>
-          <p>Vous trouverez ici des ressources concernant les actualités de développement de l'équipe, et aussi des sujets plus généralistes...</p>
+          <p class="text-grey">Vous trouverez ici des ressources concernant les actualités de développement de l'équipe, et aussi des sujets plus généralistes...</p>
         </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+
+      <div class="col-md-6 col-sm-12 right-img">
         <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
       </div>
+
     </div>
   </div>
 </section>
