--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,8 +10,8 @@ order: 4
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">Contactez-nous</h1>
-          <p>Nous sommes toujours ravis de répondre à vos questions !</p>
-          <ul class="arrow-list">
+          <p class="text-grey">Nous sommes toujours ravis de répondre à vos questions !</p>
+          <ul class="arrow-list text-blue">
             <li>Une étude ou un projet que l’on pourrait accompagner ?</li>
             <li>L’envie de nous rejoindre ?</li>
             <li>Ou simplement d’en savoir plus</li>
