feat: recrutement page responsive

--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -4,20 +4,21 @@ permalink: /recrutement/
 title: Recrutement
 order: 6
 ---
-<section id="recrutement-intro">
+<section id="recrutement-intro" class="intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">Rejoins l’aventure DEVmachine !</h1>
-
-          <p><b>Séduit par notre approche du métier ?<br />En phase avec nos valeurs ?</b></p>
-          <p>Nous recherchons en continu sur Rennes des DevOps, des développeurs front JS, des développeurs back Java ou JS, et des développeurs full-stack pour enrichir l'équipe et participer à cette belle aventure.</p>
+          <p class="text-blue"><b>Séduit par notre approche du métier ?<br />En phase avec nos valeurs ?</b></p>
+          <p class="text-grey">Nous recherchons en continu sur Rennes des DevOps, des développeurs front JS, des développeurs back Java ou JS, et des développeurs full-stack pour enrichir l'équipe et participer à cette belle aventure.</p>
         </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+
+      <div class="col-md-6 col-sm-12 right-img">
         <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
       </div>
+
     </div>
   </div>
 </section>
@@ -26,8 +27,8 @@ order: 6
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Nos annonces du moment</h1>
-      <div class="row flex-nowrap align-items-center m-auto">
-        <h2 class="section-subheading mr-3">En partenariat avec</h2>
+      <div class="row flex-nowrap align-items-center m-auto flex-md-row flex-column">
+        <h2 class="section-subheading mr-3 mb-0">En partenariat avec</h2>
         <img alt="Le Poool" src="/assets/images/clients/poool.svg" />
       </div>
     </div>
