--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ exclude-nav: true
             <a href="/offre">Parcourir notre offre</a>
           </button>
           <button type="button" class="dm-btn dm-btn-white">
-            <a href="/dm">Découvrir DEVmachine</a>
+            <a href="/dev-machine">Découvrir DEVmachine</a>
           </button>
         </div>
       </div>
@@ -134,44 +134,67 @@ exclude-nav: true
     </div>
     <div class="questions">
       <div class="question-item-container">
-        <div class="question-item">
-          <p>J’ai une idée mais je ne sais pas comment exprimer mon besoin</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
-        </div>
+        <button class="dm-btn question-item">
+          <a href="/offre#offre-1">
+            <span>J’ai une idée mais je ne sais pas comment exprimer mon besoin</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
       <div class="question-item-container">
         <div class="question-item float-right">
-          <p>Je souhaite désengorger ma dette technique, challenger ma stack technique</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
-        </div>
-      </div>
-      <div class="question-item-container">
-        <div class="question-item">
-          <p>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
-        </div>
-      </div>
-      <div class="question-item-container">
-        <div class="question-item float-right">
-          <p>Je souhaite faire développer ou faire évoluer une solution</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <button class="dm-btn question-item">
+            <a href="/offre#offre-4">
+              <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
+              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
+          </button>
         </div>
       </div>
       <div class="question-item-container">
         <div class="question-item">
-          <p>Je souhaite renforcer mon équipe de développement</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <button class="dm-btn question-item">
+            <a href="/offre#offre-5">
+              <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
+              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
+          </button>
         </div>
       </div>
       <div class="question-item-container">
         <div class="question-item float-right">
-          <p>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</p>
-          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <button class="dm-btn question-item">
+            <a href="/offre#offre-2">
+              <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
+              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
+          </button>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item">
+          <button class="dm-btn question-item">
+            <a href="/offre#offre-3">
+              <span>Je souhaite renforcer mon équipe de développement</span><!--
+              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
+          </button>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item float-right">
+          <button class="dm-btn question-item">
+            <a href="/offre#offre-6">
+              <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
+              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
+          </button>
         </div>
       </div>
     </div>
+
     <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-      <a href="/dm">
+      <a href="/offre#offre-prestations">
         Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
       </a>
     </button>
@@ -197,24 +220,24 @@ exclude-nav: true
         <p>Majoritairement techniques</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
         <h3>Des outils</h3>
         <p>Au service de la productivité des équipes</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
         <h3>Des pratiques agiles</h3>
         <p>Inspirées de Kanban et de Scrum</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
         <h3>Un état d’esprit individuel et collectif</h3>
         <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
       </div>
     </div>
     <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
-      <a href="/dm">
-        Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      <a href="/savoir-faire">
+        Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
       </a>
     </button>
   </div>
@@ -234,7 +257,7 @@ exclude-nav: true
         <h2>En savoir plus sur DEVmachine</h2>
         <p>Co-construction, RSE, locaux, équipe, etc...</p>
         <button type="button" class="dm-btn dm-btn-orange">
-          <a href=""><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
+          <a href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
         </button>
       </div>
     </div>
