--- a/pages/offre.html
+++ b/pages/offre.html
@@ -16,11 +16,8 @@ order: 1
         </div>
 
         <div class="row btn-container">
-          <button type="button" class="dm-btn dm-btn-blue">
-            <a href="/offre">Parcourir notre offre</a>
-          </button>
           <button type="button" class="dm-btn dm-btn-white">
-            <a href="/dm">Le savoir-faire DEVmachine</a>
+            <a href="/savoir-faire">Le savoir-faire DEVmachine</a>
           </button>
         </div>
 
@@ -64,7 +61,7 @@ order: 1
     </div>
 
     <!-- Liste des prestations -->
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-1" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="info">
         <h1 class="title">1 - J’ai une idée mais je ne sais pas comment exprimer mon besoin</h1>
         <p class="description">Que vous soyez start-up, ou pas, vous innovez dans votre domaine d’activité, et souhaitez formaliser plus largement le besoin d’une idée principale, définir votre produit.</p>
@@ -82,7 +79,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-2" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
       </div>
@@ -111,7 +108,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-3" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="info">
         <h1 class="title">3 - Je souhaite renforcer mon équipe de développement pour accélérer la mise à disposition de ma solution</h1>
         <ul class="arrow-list description">
@@ -132,7 +129,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-4" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
       </div>
@@ -154,7 +151,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-5" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="info">
         <h1 class="title">5 - Je souhaite industrialiser et fluidifier la production logicielle de mes projets pour accélérer le time-to-market</h1>
         <ul class="arrow-list description">
@@ -175,7 +172,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div id="offre-6" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
       </div>
