--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -21,7 +21,7 @@ order: 3
 
         <div class="row btn-container">
           <button type="button" class="dm-btn dm-btn-blue m-3">
-            <a href="">Contactez-nous</a>
+            <a href="/contact">Contactez-nous</a>
           </button>
         </div>
       </div>
@@ -88,7 +88,7 @@ order: 3
 
     <div class="row mt-5">
       <button type="button" class="dm-btn dm-btn-orange m-3 ml-auto mr-auto">
-        <a href="">
+        <a href="/recrutement">
           Nos annonces de recrutement<span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </button>
