fix: only html pages + remove px for rem

--- a/index.html
+++ b/index.html
@@ -42,37 +42,29 @@ exclude-nav: true
       <h1 class="section-heading">Piliers de notre organisation et<br>des services rendus à nos clients</h1>
     </div>
     <div class="col-12 d-flex flex-wrap">
-      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-        <div>
-          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
-        </div>
+      <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
+        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
         <div class="piliers-text">
           <h3>Engagement</h3>
           <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
         </div>
       </div>
-      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-        <div>
-          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
-        </div>
+      <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
+        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
         <div class="piliers-text">
           <h3>Collaboration</h3>
           <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
         </div>
       </div>
-      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-        <div>
-          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
-        </div>
+      <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
+        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
         <div class="piliers-text">
           <h3>Pragmatisme</h3>
           <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
         </div>
       </div>
-      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-        <div>
-          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
-        </div>
+      <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
+        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
         <div class="piliers-text">
           <h3>Confiance</h3>
           <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
@@ -142,54 +134,44 @@ exclude-nav: true
         </button>
       </div>
       <div class="question-item-container">
-        <div class="question-item float-right">
-          <button class="dm-btn question-item">
-            <a href="/offre#offre-4">
-              <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
-              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-          </button>
-        </div>
+        <button class="dm-btn question-item float-right">
+          <a href="/offre#offre-4">
+            <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
       <div class="question-item-container">
-        <div class="question-item">
-          <button class="dm-btn question-item">
-            <a href="/offre#offre-5">
-              <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
-              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-          </button>
-        </div>
+        <button class="dm-btn question-item">
+          <a href="/offre#offre-5">
+            <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
       <div class="question-item-container">
-        <div class="question-item float-right">
-          <button class="dm-btn question-item">
-            <a href="/offre#offre-2">
-              <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
-              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-          </button>
-        </div>
+        <button class="dm-btn question-item float-right">
+          <a href="/offre#offre-2">
+            <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
       <div class="question-item-container">
-        <div class="question-item">
-          <button class="dm-btn question-item">
-            <a href="/offre#offre-3">
-              <span>Je souhaite renforcer mon équipe de développement</span><!--
-              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-          </button>
-        </div>
+        <button class="dm-btn question-item">
+          <a href="/offre#offre-3">
+            <span>Je souhaite renforcer mon équipe de développement</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
       <div class="question-item-container">
-        <div class="question-item float-right">
-          <button class="dm-btn question-item">
-            <a href="/offre#offre-6">
-              <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
-              --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-          </button>
-        </div>
+        <button class="dm-btn question-item float-right">
+          <a href="/offre#offre-6">
+            <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
+            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          </a>
+        </button>
       </div>
     </div>
 
