feat: convert btn to a tag

--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@ exclude-nav: true
         </div>
 
         <div class="row btn-container">
-          <button type="button" class="dm-btn dm-btn-blue">
-            <a href="/offre">Parcourir notre offre</a>
-          </button>
-          <button type="button" class="dm-btn dm-btn-white">
-            <a href="/dev-machine">Découvrir DEVmachine</a>
-          </button>
+          <a class="dm-btn dm-btn-blue" href="/offre">Parcourir notre offre</a>
+          <a class="dm-btn dm-btn-white" href="/dev-machine">Découvrir DEVmachine</a>
         </div>
       </div>
 
@@ -126,60 +122,46 @@ exclude-nav: true
     </div>
     <div class="questions">
       <div class="question-item-container">
-        <button class="dm-btn question-item">
-          <a href="/offre#offre-1">
-            <span>J’ai une idée mais je ne sais pas comment exprimer mon besoin</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item" href="/offre#offre-1">
+          <span>J’ai une idée mais je ne sais pas comment exprimer mon besoin</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
       <div class="question-item-container">
-        <button class="dm-btn question-item float-right">
-          <a href="/offre#offre-4">
-            <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item float-right" href="/offre#offre-4">
+          <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
       <div class="question-item-container">
-        <button class="dm-btn question-item">
-          <a href="/offre#offre-5">
-            <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item" href="/offre#offre-5">
+          <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
       <div class="question-item-container">
-        <button class="dm-btn question-item float-right">
-          <a href="/offre#offre-2">
-            <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item float-right" href="/offre#offre-2">
+          <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
       <div class="question-item-container">
-        <button class="dm-btn question-item">
-          <a href="/offre#offre-3">
-            <span>Je souhaite renforcer mon équipe de développement</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item" href="/offre#offre-3">
+          <span>Je souhaite renforcer mon équipe de développement</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
       <div class="question-item-container">
-        <button class="dm-btn question-item float-right">
-          <a href="/offre#offre-6">
-            <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
-            --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-          </a>
-        </button>
+        <a class="dm-btn question-item float-right" href="/offre#offre-6">
+          <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
     </div>
 
-    <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-      <a href="/offre#offre-prestations">
-        Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
-      </a>
-    </button>
+    <a class="dm-btn dm-btn-orange mt-3" href="/offre#offre-prestations">
+      Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+    </a>
   </div>
   <!-- IMAGE FLEUR A DROITE -->
   <div class="img-container">
@@ -217,11 +199,9 @@ exclude-nav: true
         <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
       </div>
     </div>
-    <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
-      <a href="/savoir-faire">
-        Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
-      </a>
-    </button>
+    <a class="dm-btn dm-btn-orange" href="/savoir-faire">
+      Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
+    </a>
   </div>
 </section>
 
@@ -238,9 +218,7 @@ exclude-nav: true
       <div class="col-lg-6 text-center">
         <h2>En savoir plus sur DEVmachine</h2>
         <p>Co-construction, RSE, locaux, équipe, etc...</p>
-        <button type="button" class="dm-btn dm-btn-orange">
-          <a href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
-        </button>
+        <a class="dm-btn dm-btn-orange" href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
       </div>
     </div>
   </div>
