--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,11 +40,9 @@ order: 5
           <div class="empty-space"></div>
 
           <div class="btn-container">
-            <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-              <a href="{{ post.url }}">
-                Lire la suite<span aria-hidden="true" class="fas fa-chevron-right"></span>
-              </a>
-            </button>
+            <a class="dm-btn dm-btn-orange" href="{{ post.url }}">
+              Lire la suite<span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
           </div>
         </div>
       </div>
