--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -20,9 +20,7 @@ order: 3
         </div>
 
         <div class="row btn-container">
-          <button type="button" class="dm-btn dm-btn-blue m-3">
-            <a href="/contact">Contactez-nous</a>
-          </button>
+          <a class="dm-btn dm-btn-blue" href="/contact">Contactez-nous</a>
         </div>
       </div>
 
@@ -87,11 +85,9 @@ order: 3
     </div>
 
     <div class="row mt-5">
-      <button type="button" class="dm-btn dm-btn-orange m-3 ml-auto mr-auto">
-        <a href="/recrutement">
-          Nos annonces de recrutement<span aria-hidden="true" class="fas fa-chevron-right"></span>
-        </a>
-      </button>
+      <a class="dm-btn dm-btn-orange m-auto" href="/recrutement">
+        Nos annonces de recrutement<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      </a>
     </div>
   </div>
 </section>
