--- a/pages/offre.html
+++ b/pages/offre.html
@@ -16,9 +16,7 @@ order: 1
         </div>
 
         <div class="row btn-container">
-          <button type="button" class="dm-btn dm-btn-white">
-            <a href="/savoir-faire">Le savoir-faire DEVmachine</a>
-          </button>
+          <a class="dm-btn dm-btn-white" href="/savoir-faire">Le savoir-faire DEVmachine</a>
         </div>
 
       </div>
