--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -52,11 +52,9 @@ order: 6
           <div class="empty-space"></div>
 
           <div class="btn-container">
-            <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-              <a target="_blank" href="#">
-                Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
-              </a>
-            </button>
+            <a class="dm-btn dm-btn-orange" target="_blank" href="#">
+              Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            </a>
           </div>
         </div>
 
