--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -15,9 +15,7 @@ order: 2
         </div>
 
         <div class="row btn-container">
-          <button type="button" class="dm-btn dm-btn-blue">
-            <a href="/offre">Parcourir notre offre</a>
-          </button>
+          <a class="dm-btn dm-btn-blue" href="/offre">Parcourir notre offre</a>
         </div>
       </div>
 
