feat: index images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ exclude-nav: true
 
       <div class="col-md-6 col-sm-12 shape-container right-img">
         <div class="image-container">
-          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-index/dm-group.jpg"/>
         </div>
         <div class="bg-orange"></div>
       </div>
@@ -39,28 +39,28 @@ exclude-nav: true
     </div>
     <div class="col-12 d-flex flex-wrap">
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
-        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        <img alt="" src="/assets/images/website/page-index/piliers/Puzzle.svg"/>
         <div class="piliers-text">
           <h3>Engagement</h3>
           <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
-        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        <img alt="" src="/assets/images/website/page-index/piliers/Handshake.svg"/>
         <div class="piliers-text">
           <h3>Collaboration</h3>
           <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
-        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        <img alt="" src="/assets/images/website/page-index/piliers/Target.svg"/>
         <div class="piliers-text">
           <h3>Pragmatisme</h3>
           <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
-        <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        <img alt="" src="/assets/images/website/page-index/piliers/Handing-key.svg"/>
         <div class="piliers-text">
           <h3>Confiance</h3>
           <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
@@ -68,6 +68,7 @@ exclude-nav: true
       </div>
     </div>
   </div>
+  <img class="leaf" alt="" src="/assets/images/website/page-index/piliers/Leaves.svg" />
 </section>
 
 <!-- IMAGES -->
@@ -91,8 +92,9 @@ exclude-nav: true
       <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
       <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
     </div>
+
     <div class="row align-items-center mt-5">
-      <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="col-md-7 offset-md-1 col-sm-12">
         <ul class="arrow-list">
           <li>Définition de solution logicielle / définition de produit</li>
           <li>UX/UI</li>
@@ -102,8 +104,8 @@ exclude-nav: true
           <li>Infogérance</li>
         </ul>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 offset-md-0 col-sm-6 offset-sm-3">
+        <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/Project-development.svg"/>
       </div>
     </div>
   </div>
@@ -114,7 +116,7 @@ exclude-nav: true
 </div>
 
 <!-- PRESTATIONS -->
-<section id="index-prestations" class="pb-0">
+<section id="index-prestations">
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Nos prestations</h1>
@@ -159,13 +161,13 @@ exclude-nav: true
       </div>
     </div>
 
-    <a class="dm-btn dm-btn-orange mt-3" href="/offre#offre-prestations">
+    <a class="dm-btn dm-btn-orange" href="/offre#offre-prestations">
       Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
     </a>
   </div>
   <!-- IMAGE FLEUR A DROITE -->
   <div class="img-container">
-    <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+    <img alt="" src="/assets/images/website/page-index/prestations/Tree.svg"/>
   </div>
 </section>
 
@@ -177,24 +179,24 @@ exclude-nav: true
       <h1 class="section-heading">Nos savoir-faire</h1>
       <h2 class="section-subheading">Compétences et soft skills</h2>
     </div>
-    <div class="col-12 skill-items">
+    <div class="row skill-item-container">
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/lance-pierre.svg"/>
         <h3>Des compétences</h3>
         <p>Majoritairement techniques</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Conversion-rate.svg"/>
         <h3>Des outils</h3>
         <p>Au service de la productivité des équipes</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Launch-project.svg"/>
         <h3>Des pratiques agiles</h3>
         <p>Inspirées de Kanban et de Scrum</p>
       </div>
       <div class="col-lg-6 col-md-12 skill-item">
-        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Newtons.svg"/>
         <h3>Un état d’esprit individuel et collectif</h3>
         <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
       </div>
@@ -208,14 +210,11 @@ exclude-nav: true
 <!-- EN SAVOIR PLUS -->
 <section id="index-savoir-plus">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-6 text-center">
-        <div class="img-container">
-          <img class="circle" alt="" src="/assets/images/website/page-index/savoir-plus/circle_shape.svg">
-          <img class="julien" alt="" src="/assets/images/website/page-index/savoir-plus/julien-dos.jpg"/>
-        </div>
+    <div class="row align-items-center">
+      <div class="col-md-6 col-sm-12 text-center">
+        <img class="w-75" alt="" src="/assets/images/website/page-index/savoir-plus/Julien.png"/>
       </div>
-      <div class="col-lg-6 text-center">
+      <div class="col-md-6 col-sm-12 text-center text-blue">
         <h2>En savoir plus sur DEVmachine</h2>
         <p>Co-construction, RSE, locaux, équipe, etc...</p>
         <a class="dm-btn dm-btn-orange" href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
