feat: offre images

--- a/pages/offre.html
+++ b/pages/offre.html
@@ -7,7 +7,7 @@ order: 1
 <section id="offre-intro" class="intro">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-5 col-sm-12">
         <div class="intro-bg">
           <h1 class="section-heading">Notre offre de services</h1>
           <p><b>L’équipe DEVmachine répond aux besoins de ses clients en termes de Systèmes d’Informations, de plateformes Web, ou d’applications mobiles.</b></p>
@@ -20,9 +20,9 @@ order: 1
         </div>
 
       </div>
-      <div class="col-md-6 col-sm-12 right-img">
+      <div class="col-md-6 offset-md-1 col-sm-12 right-img">
         <div class="image-container">
-          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-offre/Marketing.svg"/>
         </div>
         <div class="bg-orange"></div>
       </div>
@@ -73,13 +73,13 @@ order: 1
       </div>
 
       <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Triangles.svg" />
       </div>
     </div>
 
     <div id="offre-2" class="row prestation col-lg-10 offset-lg-1 col-md-12">
-      <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+      <div class="illustration growing">
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Growing.svg" />
       </div>
 
       <div class="info">
@@ -122,14 +122,14 @@ order: 1
         </div>
       </div>
 
-      <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+      <div class="illustration thinking">
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Thinking.svg" />
       </div>
     </div>
 
     <div id="offre-4" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Confettis.svg" />
       </div>
 
       <div class="info">
@@ -165,14 +165,14 @@ order: 1
         </div>
       </div>
 
-      <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+      <div class="illustration time">
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Time-flies.svg" />
       </div>
     </div>
 
     <div id="offre-6" class="row prestation col-lg-10 offset-lg-1 col-md-12">
       <div class="illustration">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg" />
+        <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Balls.svg" />
       </div>
 
       <div class="info">
