--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -20,7 +20,7 @@ order: 2
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
-        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-savoir-faire/Hero.svg"/>
       </div>
     </div>
   </div>
